# GenshinCb2PacketSniffer-Rewrite

./: .gitignore  CMakeLists.txt  README.md
include/: ENetTypes.h  Hooks.h  PacketProcessor.h  ec2b.h  ec2b_data.h  ec2b_global.h  ec2b_runtime.h
src/: Hooks.cpp  PacketProcessor.cpp  aes.cpp  dllmain.cpp  ec2b.cpp  ec2b_data.cpp  ec2b_global.cpp  ec2b_runtime.cpp
